# gary_chassis

./: CMakeLists.txt  README.md  package.xml
include/gary_chsssis/: chassis_autonomous.hpp  chassis_power_control.hpp  chassis_solver.hpp  chassis_teleop.hpp  mecanum_chassis_solver.hpp  mode_changer.hpp  odometry.hpp  omni_chassis_solver.hpp  omni_odometry.hpp  omnidirectional_chassis_solver.hpp
include/utils/: first_order_filter.hpp  mecanum_kinematics.hpp  omni_kinematics.hpp  omnidirectional_kinematics.hpp
src/: chassis_autonomous.cpp  chassis_power_control.cpp  chassis_powercontrol.cpp  chassis_solver.cpp  chassis_task.cpp  chassis_teleop.cpp  mecanum_chassis_solver.cpp  mode_changer.cpp  odometry.cpp  omni_chassis_solver.cpp  omni_odometry.cpp  omnidirectional_chassis_solver.cpp
src/utils/: first_order_filter.cpp  mecanum_kinematics.cpp  omni_kinematics.cpp  omnidirectional_kinematics.cpp
